<resources>
    <string name="Quiz_App">Quiz Citizenship</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="welcome">CITIZENSHIP TEST</string>
    <string name="american_flag_image">American flag</string>
    <string name="Click_Start">Click the Start button to begin</string>
    <string name="start_button">START</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="Display_current_NoQuestion">The 1 question/20</string>
    <string name="questions_quiz_board">This is the questions</string>
    <string name="display_score">Score: 0</string>
    <string name="answer_A_board">Answer A</string>
    <string name="answer_B_board">Answer B</string>
    <string name="answer_C_board">Answer C</string>
    <string name="answer_D_board">Answer D</string>
    <string name="next_button_board">Next</string>
    <!-- TODO: the result fragment -->
    <string name="result_message">Message will be sent here from quiz board</string>
    <string name="list_quiz_answer">Review The Test.\n</string>
    <string name="final_score">Scores</string>
    <string name="re_test">ReTest</string>
    <string name="display_list_anwers">1. The idea of self-government is in the first three words of the Constitution.
        What are these words?\n
        Answer: We the people.\n
        2. WWhen was the Constitution written?\n
        Answer: 1787\n
        3. How many amendments does the Constitution have?\n
        Answer: 27\n
        4. What is the name of the President of the United States now?\n
        Answer: Joe Biden\n
        5. What is the name of the Vice President of the United States now?\n
        Answer: Kamala Harris\n
        6. How old do citizens have to be to vote for President?\n
        18 and older\n
        7. We select a President for how many years?\n
        Answer: 4 years\n
        8. In what month do we vote for President?\n
        Answer: November\n
        9.What is the capital of the United States?\n
        Answer: Washington D.C\n
        10. When do we celebrate Independence Day?\n
        Answer: July 04\n
        11. How many U.S. Senators are there?\n
        Answer: 100\n
        12. We elect a U.S. Senator for how many years?\n
        Answer: 6 years\n
        13. Who does a U.S. Senator represent?\n
        Answer: All people of the state\n
        14. The House of Representatives has how many voting members?\n
        Answer: 435\n
        15. We elect a U.S. Representative for how many years?\n
        Answer: 2 years\n
        16. Name one state that borders Mexico?\n
        Answer: New Mexico\n
        17. Who is the Father of Our Country?\n
        Answer: George Washington\n
        18. When is the last day you can send in federal income tax form?\n
        Answer: April 15\n
        19. Why does the flag have 50 stars?\n
        Answer: Because there are 50 states\n
        20. When must all men register for the Selective Service?\n
        Answer: At age eighteen\n


    </string>
    <!-- TODO: Remove or change this placeholder text -->

    <string name="help"> User click the start button to start the quiz.\n The quiz will have 20 questions there.\n
    After choose an answer, all the answers will be blocked. Then, user click submit button to move on the next question.\n
    The score will count up when user choose the correct answer.\n
    User will pass the quiz if you pass at least 16 questions.\n
    When users finish the quiz, a Window will appear to show the result, score, and the list questions including answers  \n
    to help user practice next time</string>
    <string name="title">Help</string>
    <string name="detail">Author: Quy Nguyen and Rithpanh Han.\nThe purpose of the app: help users practice the citizenship quiz.\n
    App version: 1.0.0\n We will update the app: build up until 100 questions.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="review_test">Review Test</string>
</resources>